<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:id="@+id/soda_card_cv"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="280dp"
    android:layout_marginBottom="10dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginTop="10dp"
    android:orientation="vertical"
    card_view:cardCornerRadius="4dp"
    card_view:elevation="4dp">

    <LinearLayout
        android:id="@+id/soda_card_ll_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/soda_card_background"
        android:orientation="vertical">

        <TextView
            android:id="@+id/soda_card_tv_brand_label"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/primary"
            android:gravity="center_vertical"
            android:paddingEnd="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingStart="10dp"
            android:text="@string/example_soda_card_label"
            android:textColor="@android:color/white"
            android:textSize="28sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/soda_card_tv_twelve_pack_label"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:paddingEnd="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingStart="10dp"
            android:singleLine="true"
            android:text="@string/soda_card_twelve_packs_label"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:id="@+id/soda_card_ll_twelve_pack_counter"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:paddingEnd="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingStart="10dp"
            android:weightSum="3">

            <Button
                android:id="@+id/soda_card_btn_tp_subtract"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/soda_card_btn_subtract"
                android:gravity="center"
                android:padding="0dp"
                android:text="@string/soda_card_subtract"
                android:textColor="@android:color/holo_red_light"
                android:textSize="36sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/soda_card_tv_tp_display"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/soda_card_tv_borders"
                android:gravity="center"
                android:text="@string/example_soda_card_twelve_pack_display"
                android:textSize="36sp"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/soda_card_btn_tp_add"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/soda_card_btn_add"
                android:gravity="center"
                android:padding="0dp"
                android:text="@string/soda_card_add"
                android:textColor="@android:color/holo_green_light"
                android:textSize="36sp"
                android:textStyle="bold"/>
        </LinearLayout>

        <TextView
            android:id="@+id/soda_card_tv_cans_label"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_vertical"
            android:paddingEnd="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingStart="10dp"
            android:singleLine="true"
            android:text="@string/soda_card_cans_label"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:id="@+id/soda_card_ll_cans_counter"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:paddingEnd="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingStart="10dp"
            android:weightSum="3">

            <Button
                android:id="@+id/soda_card_btn_cans_subtract"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/soda_card_btn_subtract"
                android:gravity="center"
                android:padding="0dp"
                android:text="@string/soda_card_subtract"
                android:textColor="@android:color/holo_red_light"
                android:textSize="36sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/soda_card_tv_cans_display"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/soda_card_tv_borders"
                android:gravity="center"
                android:text="@string/example_soda_card_cans_display"
                android:textSize="36sp"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/soda_card_btn_cans_add"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/soda_card_btn_add"
                android:gravity="center"
                android:padding="0dp"
                android:text="@string/soda_card_add"
                android:textColor="@android:color/holo_green_light"
                android:textSize="36sp"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>