<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context="com.sodatracker.apptastic.sodatracker.activities.AddSodaActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/add_soda_activity_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:elevation="4dp"
        android:minHeight="48dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        android:titleTextColor="@android:color/white"
        app:titleTextColor="@android:color/white"
        tools:ignore="UnusedAttribute"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/add_soda_et_brand_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_soda_activity_brand_hint"
                android:inputType="textCapWords|textAutoCorrect"
                android:singleLine="true"
                android:textSize="18sp"/>
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/add_soda_tv_twelve_pack_label"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:paddingEnd="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingStart="10dp"
            android:singleLine="true"
            android:text="@string/soda_card_twelve_packs_label"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:id="@+id/add_soda_ll_twelve_pack_counter"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:paddingEnd="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingStart="10dp"
            android:weightSum="3">

            <Button
                android:id="@+id/add_soda_btn_tp_subtract"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/soda_card_btn_subtract"
                android:gravity="center"
                android:padding="0dp"
                android:text="@string/soda_card_subtract"
                android:textColor="@android:color/holo_red_light"
                android:textSize="36sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/add_soda_tv_tp_display"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/soda_card_tv_borders"
                android:gravity="center"
                android:text="@string/example_soda_card_twelve_pack_display"
                android:textSize="36sp"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/add_soda_btn_tp_add"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/soda_card_btn_add"
                android:gravity="center"
                android:padding="0dp"
                android:text="@string/soda_card_add"
                android:textColor="@android:color/holo_green_light"
                android:textSize="36sp"
                android:textStyle="bold"/>
        </LinearLayout>

        <TextView
            android:id="@+id/add_soda_tv_cans_label"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginBottom="10dp"
            android:gravity="center_vertical"
            android:paddingEnd="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingStart="10dp"
            android:singleLine="true"
            android:text="@string/soda_card_cans_label"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:id="@+id/add_soda_ll_cans_counter"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:paddingEnd="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingStart="10dp"
            android:weightSum="3">

            <Button
                android:id="@+id/add_soda_btn_cans_subtract"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/soda_card_btn_subtract"
                android:gravity="center"
                android:padding="0dp"
                android:text="@string/soda_card_subtract"
                android:textColor="@android:color/holo_red_light"
                android:textSize="36sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/add_soda_tv_cans_display"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/soda_card_tv_borders"
                android:gravity="center"
                android:text="@string/example_soda_card_cans_display"
                android:textSize="36sp"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/add_soda_btn_cans_add"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/soda_card_btn_add"
                android:gravity="center"
                android:padding="0dp"
                android:text="@string/soda_card_add"
                android:textColor="@android:color/holo_green_light"
                android:textSize="36sp"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
